Mostrar todas las ordenes en usuario administrador

--- a/.env.template
+++ b/.env.template
@@ -8,7 +8,7 @@ AUTH_SECRET=your-secret-key
 
 # PayPal
 # https://developer.paypal.com/dashboard
-# anapaypal@google.com
+# anafrank-buyer@gmail.com
 # Abc123456
 NEXT_PUBLIC_PAYPAL_CLIENT_ID=
 PAYPAL_SECRET=
